Clean mods folder for every run